# rust-bitbankcc

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: private.rs  public.rs
src/: bitbankcc.rs  client.rs  data.rs  enums.rs  error.rs  lib.rs  model.rs  private_client.rs  response.rs
src/enums/: currency_pair.rs
src/model/: assets.rs  candlestick.rs  depth.rs  enums.rs  exchange_status.rs  order.rs  orders.rs  request.rs  response.rs  ticker.rs  trade.rs  transactions.rs
src/model/enums/: candle_type.rs  currency_pair.rs  order_side.rs  order_status.rs  order_type.rs
src/model/request/: cancel_body.rs  cancels_body.rs  order_body.rs
src/model/response/: assets_data.rs  assets_response.rs  candlestick_data.rs  candlestick_response.rs  depth_data.rs  depth_response.rs  error_response.rs  exchange_status_data.rs  order_data.rs  orders_data.rs  response.rs  ticker_data.rs  ticker_response.rs  trade_data.rs  transactions_data.rs
