[package]
name = "bitbankcc"
version = "0.1.0"
authors = ["Tamura Yukichi <tamura.yukichi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
http = "0.2.4"
sha2 = "0.9.5"
hmac = "0.11.0"
hex = "0.4.3"
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0.25"
url = "2.2.2"
serde_with = "1.9.2"
